--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>História da Computação</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="section" id="section1">
+<h1>A Revolução dos Computadores</h1>
+<h2>De Tubos a Transistores</h2>
+<p>Nos anos 1940, os primeiros computadores eletrônicos foram construídos usando tubos
+    de vácuo. Com o passar dos anos, os transistores revolucionaram a tecnologia, tornando
+    os computadores menores, mais rápidos e eficientes.</p>
+<img src="ibm.jpg" alt="Computador antigo da IBM que foi uma das primeiras fabricantes de computadores do mundo.">
+</div>
 
+<div class="section" id="section2">
+<h1>O Início da Computação</h1>
+<h2>As Primeiras Máquinas</h2>
+<p>A história da computação começou no século XIX com a criação do primeiro conceito
+    de computador mecânico por Charles Babbage. Ele projetou a "Máquina Analítica", que
+    nunca foi construída na época, mas é considerada o precursor dos computadores
+    modernos.</p>
+<img src="analitico.jpg" alt="A máquina analítica, também conhecido como engenho analítico foi proposto pelo professor de matemática e pioneiro da ciência da computação Charles Babbage">
+</div>
+
+<div class="section" id="section3">
+<h1>A Era da Internet</h1>
+<h2>A Conexão Global</h2>
+<p>A criação da internet nos anos 1960 e sua popularização nos anos 1990 transformaram o
+    mundo. Hoje, estamos todos conectados, e a ciência da computação continua a evoluir
+    para criar novas formas de comunicação e inovação..</p>
+<img src="globo.jpg" alt="um globo terreste mostrado o sistema de cabos de internet">
+</div>
+</body>
+</html>
