--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-
+scale=0.5">
+
+<title>Home | Curso Técnico de Desenvolvimento de Sistemas</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+     <!--header é a parte do cabeçalho do site, é o topo da página-->
+    <header class="cabecalho-itens">
+    
+    <img class="cabecalho_imagem" src="logo.png" alt="Logo da pagina">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>História da Computação</title>
 <link rel="stylesheet" href="style.css">
