--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@ scale=3.0">
 <p>A criação da internet nos anos 1960 e sua popularização nos anos 1990 transformaram o
     mundo. Hoje, estamos todos conectados, e a ciência da computação continua a evoluir
     para criar novas formas de comunicação e inovação..</p>
-<img src="globo.jpg" alt="um globo terreste mostrado o sistema de cabos de internet">
+<img src="globo.jpg" alt="um globo terreste mostrado o sistema de cabos de internet"> 
+
 </div>
+</div>
+</section><!--Seção rodapé é a parte final da paragrafo 3 da página-->
+<footer class="curso">
+<img class="logo_rodape" src="rodape.png" alt="Logo
+do curso">
+<h2 class="curso tecnico projeto">Mais informações entre em contato<a
+class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
+</a></h2>
+<p></p>
+<p>©2024 | Curso de ADS | Todos os Direitos Reservados.
+Política de Privacidade | Proteção de dados | Encarregado de
+
+dados</p>
+<p> </p>
+</footer>
 </body>
 </html>
+
+
